[gd_scene load_steps=4 format=3 uid="uid://bbi7mt4tc5uql"]

[ext_resource type="LabelSettings" uid="uid://c7lesa8xp8h5k" path="res://assets/sh_48_red.tres" id="1_5nvql"]
[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_ooj6a"]
[ext_resource type="AudioStream" uid="uid://h2v3lxikjjf4" path="res://assets/audio/game_over.wav" id="3_3pl0d"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ooj6a")

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER!"
label_settings = ExtResource("1_5nvql")

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_5nvql")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3pl0d")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
